# BARCHIFICATOR_40000

./: CMakeLists.txt  LICENSE  README.md  _clang-format  main.cpp  main.qml
BarchLib/: CMakeLists.txt  barchlib.cpp  barchlib.hpp  barchlib_test.cpp
BarchUI/: Button.qml  CMakeLists.txt  Dialog.qml  ScrollBar.qml  barchuimodel.cpp  barchuimodel.hpp
